<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".ViewPagerSlides">


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/slideViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.viewpager.widget.ViewPager>

    <Button
        android:id="@+id/skip_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:backgroundTint="#FFFFFF"
        android:text="@string/skip"
        android:textColor="#000000"
        android:textSize="13sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:alpha="0.7"
        android:background="@android:color/transparent"
        android:backgroundTint="#FFFFFF"
        android:text="@string/back"
        android:textColor="#aaa480"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:alpha="0.7"
        android:background="@android:color/transparent"
        android:backgroundTint="#FFFFFF"
        android:text="@string/next"
        android:textColor="#aaa480"
        android:textSize="12sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/getstarted_btn"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="60dp"
        android:background="@drawable/style_addtofav_button"
        android:elevation="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="16sp"
        android:visibility="invisible" />


    <LinearLayout
        android:id="@+id/dotsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

    </LinearLayout>


</RelativeLayout>