<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_onboarding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/onboarding_ui"
    tools:context=".OnBoarding">


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_onboarding"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:alpha="0.9"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="17dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgv_chefsHat"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:src="@drawable/chefshat" />

            <TextView
                android:id="@+id/deep_flavours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/amaranth_bold"
                android:text="@string/deep_flavours"
                android:textColor="#aaa480"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:alpha="0.90"
                android:text="@string/tv_description"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/createaccount_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:width="220dp"
                android:height="20dp"
                android:background="@drawable/btn_createaccount"
                android:elevation="20dp"
                android:text="@string/createaccount_btn"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                >

                <TextView
                    android:id="@+id/tv_haveaccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:text="@string/tv_haveaccount"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/tv_login"
                    android:textColor="#aaa480"
                    android:textSize="17sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>