<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_startcooking"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/startcooking_ui"
    tools:context=".StartCooking">

    <ImageView
        android:id="@+id/iv_language"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="15dp"
        android:padding="7dp"
        android:src="@drawable/translate"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout_startcooking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="145dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/deep_flavours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="15dp"
            android:text="@string/deep_flavours"
            android:textColor="#aaa480"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/deliciously_simple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/deliciously_simple"
            android:textSize="25sp" />
    </LinearLayout>


    <Button
        android:id="@+id/startcooking_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="650dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="100dp"
        android:width="270dp"
        android:height="20dp"
        android:alpha="0.90"
        android:background="@drawable/btn_startcooking"
        android:text="@string/startcooking_btn"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
